# Pixel-City-

./: .gitignore  CMakeLists.txt  build_and_run.ps1
saves/: Malih.save  daf.save  dsdxd.save  fd.save  jklljk.save  lll.save  malkskas.save  sdsf.save  test.save  test1.save  test_Game.save  yara.save  zdasd.save
src/: .gitignore  main.cpp
src/core/: Config.hpp  Game.cpp  Game.hpp
src/engine/: Input.cpp  Input.hpp  Scene.hpp  SceneManager.cpp  SceneManager.hpp
src/game/: BuildCatalog.hpp  BuildTool.hpp  BuildToolFactory.cpp  BuildToolFactory.hpp  BuilderScene.cpp  BuilderScene.hpp  Cost.hpp  Economy.cpp  Economy.hpp  EconomySystem.hpp  Inventory.cpp  Inventory.hpp  InventoryPanel.cpp  InventoryPanel.hpp  RadialMenu.cpp  RadialMenu.hpp  SaveSystem.cpp  SaveSystem.hpp  SaveTypes.hpp  SidePanel.cpp  SidePanel.hpp  Wallet.cpp
src/game/screens/: LoadGameScreen.cpp  LoadGameScreen.hpp  MainMenuScreen.cpp  MainMenuScreen.hpp  NameEntryScreen.cpp  NameEntryScreen.hpp  SplashScreen.cpp  SplashScreen.hpp
src/graphics/: Camera2D.cpp  Camera2D.hpp  PixelRenderer.cpp  PixelRenderer.hpp
src/ui/: Button.cpp  Button.hpp  PanelButton.cpp  PanelButton.hpp
src/world/: Building.hpp  City.cpp  City.hpp  Collectable.hpp  Crop.hpp  CropFactory.cpp  CropFactory.hpp  CropRegistry.cpp  CropRegistry.hpp  Decoration.hpp  Fountain.cpp  Fountain.hpp  House.cpp  House.hpp  Infrastructure.hpp  MoneyProducer.hpp  Placeable.hpp  Road.cpp  Road.hpp  Saveable.hpp  Tile.hpp  TilemapRenderer.cpp  TilemapRenderer.hpp  WorldObject.cpp  WorldObject.hpp
src/world/Buildings/: Bakery.cpp  Bakery.hpp  (+8 more)
(+24 files in other folders)
